COMP: PolyLineImageConstIterator modifying test

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -440,9 +440,10 @@ ADD_TEST(coTvPolygon ${COMMON_TESTS6}
 
 #-------- otb::PolyLineImageIterator -----------------------------------------
 
- ADD_TEST(coTuPolyLineImageConstIteratorNew ${COMMON_TESTS6}
-         otbPolyLineImageConstIteratorNew
-	        ${INPUTDATA}/poupees_sub_c1.png
+ ADD_TEST(coTvPolyLineImageConstIterator ${COMMON_TESTS6}
+         otbPolyLineImageConstIterator
+		 10 10 35
+		 ${TEMP}/coTvPolyLineImageConstIterator.txt
 )
 
 ADD_TEST(coTvPolyLineImageIterator ${COMMON_TESTS6}
