OTB classes (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,6 @@ TARGET_LINK_LIBRARIES(myOwnMapnik mapnik)
 
 ADD_EXECUTABLE(mapnikFromVectorData mapnikFromVectorData.cxx)
 TARGET_LINK_LIBRARIES(mapnikFromVectorData OTBCommon OTBIO mapnik)
+
+ADD_EXECUTABLE(mapnikOTBClasses mapnikOTBClasses.cxx)
+TARGET_LINK_LIBRARIES(mapnikOTBClasses OTBCommon OTBIO)
