--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ ENDIF(OTB_FOUND)
 INCLUDE_DIRECTORIES("/home/christop/slash/include" )
 INCLUDE_DIRECTORIES("/usr/include/freetype2" )
 LINK_DIRECTORIES("/home/christop/slash/lib")
-
+LINK_DIRECTORIES("/home/christop/slash/lib64")
 
 
 ADD_EXECUTABLE(myOwnMapnik myOwnMapnik.cxx)
