BUG: add NOT CYGWIN condition for CPack condition installation of .dll and .lib files for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -964,7 +964,7 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/Copyright/OTBCopyri
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_RPM_PACKAGE_DESCRIPTION)
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_DEBIAN_PACKAGE_DESCRIPTION)
 
-IF(WIN32 AND NOT UNIX)
+IF(WIN32 AND NOT UNIX AND NOT CYGWIN)
 #Find gdal dll files, localized in the GDAL_LIBRARY directory
 GET_FILENAME_COMPONENT(GDAL_LIB_DIR "${GDAL_LIBRARY}" PATH )
 SET(GDAL_LIB_DIR "${GDAL_LIB_DIR}/" )
@@ -974,7 +974,7 @@ INSTALL(DIRECTORY ${GDAL_LIB_DIR}
 INSTALL(DIRECTORY ${GDAL_LIB_DIR}
         DESTINATION                 lib
         FILES_MATCHING  PATTERN     "*.lib" )
-ENDIF(WIN32 AND NOT UNIX)
+ENDIF(WIN32 AND NOT UNIX AND NOT CYGWIN)
 
 INCLUDE(CPack)
 
