ENH: optional compilation of classes depending on mapnik

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -2,6 +2,10 @@
 
 FILE(GLOB OTBCommon_SRCS "*.cxx" )
 
+IF( NOT OTB_USE_MAPNIK )
+    LIST(REMOVE_ITEM OTBCommon_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/otbVectorDataStyle.cxx" )
+ENDIF( NOT OTB_USE_MAPNIK )
+
 ADD_LIBRARY(OTBCommon ${OTBCommon_SRCS})
 TARGET_LINK_LIBRARIES (OTBCommon ITKAlgorithms ITKStatistics ITKCommon)
 IF(OTB_LIBRARY_PROPERTIES)
