--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -577,7 +577,7 @@ ADD_TEST(coTuShiftScaleImageAdaptorNew ${COMMON_TESTS7}
 )
 
 ADD_TEST(coTvShiftScaleImageAdaptor ${COMMON_TESTS7}
-  --compare-image 10e-9
+  --compare-image ${EPSILON_9}
 	          ${BASELINE}/coTvShiftScaleImageAdaptor.tif    # copie the input image
 		  ${TEMP}/coTvShiftScaleImageAdaptor.tif
      otbShiftScaleImageAdaptor
